--- a/articles/cloudfoundry/toc.yml
+++ b/articles/cloudfoundry/toc.yml
@@ -13,6 +13,8 @@
       href: /azure/virtual-machines/linux/cloudfoundry-get-started
     - name: Distribuera CF OMS Nozzle
       href: /azure/cloudfoundry/cloudfoundry-oms-nozzle
+    - name: Integrera Cloud Foundry med Azure
+      href: /azure/cloudfoundry/how-cloud-foundry-integrates-with-azure
 - name: Resurser
   items:
     - name: Azure-översikt
