--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -75,6 +75,8 @@
           href: concepts-firewall-rules.md
         - name: Konfigurerar SSL
           href: concepts-ssl-connection-security.md
+        - name: VNet
+          href: concepts-data-access-and-security-vnet.md
     - name: Verksamhetskontinuitet
       items:
         - name: Översikt
@@ -89,6 +91,10 @@
           href: concepts-compatibility.md
         - name: Programutveckling
           href: concepts-database-application-development.md
+    - name: Replikering
+      items:
+        - name: Dataintensiv replikering
+          href: concepts-data-in-replication.md
 - name: Instruktionsguider
   items:
     - name: Hantera en server
@@ -141,18 +147,30 @@
       items:
         - name: Skapa aviseringar för mått
           href: howto-alert-on-metric.md
+    - name: Replikering
+      items:
+        - name: Konfigurera dataintensiv replikering
+          href: howto-data-in-replication.md
     - name: Felsöka
       items:
         - name: Felsöka frågeprestanda
           href: howto-troubleshoot-query-performance.md
         - name: Använda vyer i sys-schema
           href: howto-troubleshoot-sys-schema.md
+    - name: Virtual Network
+      items:
+        - name: Azure Portal
+          href: howto-manage-vnet-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-vnet-using-cli.md
 - name: Referens
   items:
     - name: Azure CLI
       href: /cli/azure/mysql
     - name: REST-API
       href: /rest/api/mysql
+    - name: Lagrade procedurer för dataintensiv replikering
+      href: reference-data-in-stored-procedures.md
 - name: Resurser
   items:
     - name: Distributionsmallar
