--- a/articles/active-directory/managed-service-identity/TOC.yml
+++ b/articles/active-directory/managed-service-identity/TOC.yml
@@ -4,20 +4,22 @@
   items:
     - name: Om Hanterad tjänstidentitet
       href: overview.md
-    - name: Snabbstarter
+- name: Snabbstarter
+  items:
+    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Resource Manager
       items:
-        - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Resource Manager
-          items:
-            - name: Virtuell Windows-dator
-              href: tutorial-windows-vm-access-arm.md
-            - name: Virtuell Linux-dator
-              href: tutorial-linux-vm-access-arm.md
+        - name: Virtuell Windows-dator
+          href: tutorial-windows-vm-access-arm.md
+        - name: Virtuell Linux-dator
+          href: tutorial-linux-vm-access-arm.md
 - name: Självstudier
   items:
     - name: Windows VM/VMSS
       items:
         - name: Få åtkomst till Azure Data Lake Store
           href: tutorial-windows-vm-access-datalake.md
+        - name: Få åtkomst till Azure Storage
+          href: tutorial-vm-windows-access-storage.md
         - name: Få åtkomst till Azure Storage med en åtkomstnyckel
           href: tutorial-windows-vm-access-storage.md
         - name: Få åtkomst till Azure Storage med SAS
@@ -34,6 +36,8 @@
       items:
         - name: Få åtkomst till Azure Data Lake Store
           href: tutorial-linux-vm-access-datalake.md
+        - name: Få åtkomst till Azure Storage
+          href: tutorial-linux-vm-access-storage.md
         - name: Få åtkomst till Azure Storage med en åtkomstnyckel
           href: tutorial-linux-vm-access-storage-access-key.md
         - name: Få åtkomst till Azure Storage med SAS
@@ -116,3 +120,7 @@
       href: known-issues.md
     - name: Azure-tjänster som stöder hanterade identiteter
       href: services-support-msi.md
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-msi'
+    - name: Forum för AAD-utvecklare
+      href: 'https://feedback.azure.com/forums/169401-azure-active-directory/category/164757-developer-experiences'
