--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -37,6 +37,8 @@
           href: tutorial-nodejs-mongodb-app.md
         - name: Anpassad Python-behållare med PostgreSQL
           href: tutorial-docker-python-postgresql-app.md
+    - name: App med flera behållare
+      href: tutorial-multi-container-app.md
     - name: Anpassad Docker-avbildning
       href: tutorial-custom-docker-image.md
     - name: Mappa anpassad domän
@@ -44,7 +46,7 @@
     - name: Bind SSL-certifikat
       href: ../app-service-web-tutorial-custom-ssl.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Lägg till CDN
-      href: ../../cdn/app-service-web-tutorial-content-delivery-network.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+      href: ../../cdn/cdn-add-to-web-app.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Autentisera användare
       href: tutorial-auth-aad.md
 - name: Exempel
@@ -129,6 +131,8 @@
           href: ../../monitoring-and-diagnostics/insights-how-to-scale.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
     - name: Övervaka app
       items:
+        - name: Anslut till app via SSH
+          href: app-service-linux-ssh-support.md
         - name: Kvoter och aviseringar
           href: ../web-sites-monitor.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
         - name: Aktivera loggar
