--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -48,24 +48,39 @@
     - name: Stöd för omdirigering
       href: redirect-overview.md
     - name: Stöd för flera klienter
+      href: application-gateway-web-app-overview.md
     - name: Hälsoövervakning
       href: application-gateway-probe-overview.md
     - name: WebSocket-stöd
       href: application-gateway-websocket.md
 - name: Instruktionsguider
   items:
-    - name: Skapa Application Gateway
+    - name: Hantera webbtrafik
       items:
+        - name: Azure PowerShell
+          href: tutorial-manage-web-traffic-powershell.md
         - name: Mall
           href: create-vmss-template.md
-        - name: Webbappar – PowerShell
-          href: create-web-app.md
-        - name: Konfigurera en intern belastningsutjämnare
-          href: application-gateway-ilb.md
-    - name: Konfigurera SSL-avslutning – portalen
-      href: create-ssl-portal.md
-    - name: Tillhandahåll värdtjänster för flera webbplatser – Portalen
-      href: create-multiple-sites-portal.md
+    - name: Konfigurera intern belastningsutjämnare
+      items:
+        - name: Azure PowerShell
+          href: application-gateway-ilb-arm.md
+    - name: Konfigurera SSL-avslutning
+      items:
+        - name: SSL-avslutning med Azure Portal
+          href: create-ssl-portal.md
+        - name: SSL-avslutning med Azure PowerShell
+          href: tutorial-ssl-powershell.md
+        - name: Förnya certifikat
+          href: renew-certificates.md
+        - name: Konfigurera SSL-princip
+          href: application-gateway-configure-ssl-policy-powershell.md
+    - name: Konfigurera brandväggen för webbappar
+      items:
+        - name: Azure Portal
+          href: application-gateway-web-application-firewall-portal.md
+        - name: Azure PowerShell
+          href: tutorial-restrict-web-traffic-powershell.md
     - name: Anpassa WAF-regler
       items:
         - name: Azure Portal
@@ -74,40 +89,36 @@
           href: application-gateway-customize-waf-rules-powershell.md
         - name: Azure CLI
           href: application-gateway-customize-waf-rules-cli.md
-    - name: Omdirigera extern trafik
+    - name: Dirigera efter URL
       items:
+        - name: Azure Portal
+          href: create-url-route-portal.md
         - name: Azure PowerShell
-          href: redirect-external-site-powershell.md
-        - name: Azure CLI
-          href: redirect-external-site-cli.md
-    - name: Omdirigera HTTP till HTTPS
+          href: tutorial-url-route-powershell.md
+    - name: Tillhandahåll värdtjänster för flera webbplatser
       items:
+        - name: Azure Portal
+          href: create-multiple-sites-portal.md
         - name: Azure PowerShell
-          href: redirect-http-to-https-powershell.md
-        - name: Azure CLI
-          href: redirect-http-to-https-cli.md
-    - name: Omdirigera intern trafik
+          href: tutorial-multiple-sites-powershell.md
+    - name: Omdirigera trafik
       items:
-        - name: Azure PowerShell
-          href: redirect-internal-site-powershell.md
-        - name: Azure CLI
-          href: redirect-internal-site-cli.md
-    - name: Begränsa webbtrafik – Portalen
-      href: create-waf-portal.md
-    - name: Routning baserat på URL – Portalen
-      href: create-url-route-portal.md
-    - name: Hantera webbtrafik med hjälp av Azure PowerShell
-      href: tutorial-manage-web-traffic-powershell.md
-    - name: Begränsa webbtrafik med hjälp av Azure PowerShell
-      href: tutorial-restrict-web-traffic-powershell.md
-    - name: SSL-avslutning med Azure PowerShell
-      href: tutorial-ssl-powershell.md
-    - name: Förnya certifikat
-      href: renew-certificates.md
-    - name: Tillhandahåll värdtjänster för flera webbplatser med hjälp av Azure PowerShell
-      href: tutorial-multiple-sites-powershell.md
-    - name: Dirigera webbtrafik med hjälp av Azure PowerShell
-      href: tutorial-url-route-powershell.md
+        - name: HTTP till HTTPS
+          items:
+            - name: Azure PowerShell
+              href: redirect-http-to-https-powershell.md
+            - name: Azure CLI
+              href: redirect-http-to-https-cli.md
+        - name: Omdirigera intern trafik
+          items:
+            - name: Azure PowerShell
+              href: redirect-internal-site-powershell.md
+            - name: Azure CLI
+              href: redirect-internal-site-cli.md
+    - name: Stöd för flera klienter
+      items:
+        - name: Konfigurera stöd för flera klienter
+          href: create-web-app.md
     - name: Omdirigera webbtrafik med hjälp av Azure PowerShell
       href: tutorial-url-redirect-powershell.md
     - name: Skapa en zonredundant programgateway
