--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -5,24 +5,23 @@ metadata:
   document_id: 
   title: Dokumentation för Azure Maps | Microsoft Docs
   meta.description: Use Azure Maps to provide geospatial services to your web or mobile application.
-  services: azure-maps
   author: philmea
-  manager: timlt
+  manager: 
   ms.service: azure-maps
-  ms.tgt_pltfrm: na
-  ms.devlang: na
+  services: azure-maps
   ms.topic: landing-page
   ms.date: 05/07/2018
   ms.author: philmea
-  ms.openlocfilehash: 5561f4720a396a90dbffe08e420d3b9ee66ec206
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: 2d7820649a4b1123a78d70a720ae58a0e1898407
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34600110"
 abstract:
   description: Azure Maps ger utvecklare från alla branscher kraftfulla geospatiala funktioner med nya mappningsdata som krävs för att tillhandahålla geografisk kontext till webb- och mobilprogram. Den här tjänsten är en uppsättning REST API:er som är kompatibla med Azure One API och som åtföljs av en webbaserad JavaScript-kontroll som gör utveckling över flera medier enkelt, flexibelt och portabelt.
 sections:
-- title: Snabbstarter på fem minuter
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
     text: Starta en kartsökningsapp med Azure Maps.
@@ -33,7 +32,7 @@ sections:
         src: /azure/sql-database/media/index/portal.svg
       text: Starta demonstration av en kartapp
       href: /azure/azure-maps/quick-demo-map-app
-- title: Stegvisa självstudier
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: Skapa ett geospatialt webbprogram för att söka efter orienteringspunkter och dirigera till platser med hjälp av Azure Maps.
@@ -49,7 +48,7 @@ sections:
     style: cards
     className: cardsW
     items:
-    - title: Språk
-      html: <p><a href="https://docs.microsoft.com/javascript/api/azure-maps-javascript/">API för kartkontroll – Javascript</a></p>
+    - title: JavaScript
+      html: <p><a href="https://docs.microsoft.com/javascript/api/azure-maps-javascript/">Kartkontroll</a></p>
     - title: REST
-      html: <p><a href="https://docs.microsoft.com/rest/api/maps/">Funktions-API – REST</a></p><p><a href="https://docs.microsoft.com/rest/api/maps-management/">API för hantering – REST</a></p>
+      html: <p><a href="https://docs.microsoft.com/rest/api/maps/renderservice">Renderingstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/routeservice">Routningstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/searchservice">Söktjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/timezoneservice">Tidszonstjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps/trafficservice">Trafiktjänst</a></p><p><a href="https://docs.microsoft.com/rest/api/maps-management/">Kartkontohantering</a></p>
