--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -2,29 +2,30 @@
 documentType: LandingData
 title: Dokumentation om Azure Backup
 metadata:
-  title: "Dokumentation om Azure Backup – Självstudier, API-referens | Microsoft Docs"
-  description: "Med Azure Backup kan du säkerhetskopiera data för lokala servrar, virtuella datorer, virtualiserade arbetsbelastningar, SQL Server, SharePoint Server med mera. Lär dig hur du säkerhetskopierar och återställer data med våra snabbstarter, självstudier och exempel."
+  title: Dokumentation om Azure Backup – Självstudier, API-referens | Microsoft Docs
+  description: Med Azure Backup kan du säkerhetskopiera data för lokala servrar, virtuella datorer, virtualiserade arbetsbelastningar, SQL Server, SharePoint Server med mera. Lär dig hur du säkerhetskopierar och återställer data med våra snabbstarter, självstudier och exempel.
   services: backup
-  author: czeumault
-  manager: carolz
+  author: markgalioto
+  manager: carmonm
   ms.service: backup
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/11/2017
-  ms.author: carolz
-  ms.openlocfilehash: f2654916ee61a548537c8887ff7d1923fb6f29ac
-  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
+  ms.date: 05/22/2018
+  ms.author: markgal
+  ms.openlocfilehash: b2907330477c62cce2ee5e9498cc4445580161a2
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34606876"
 abstract:
-  description: "Med Azure Backup kan du säkerhetskopiera data för lokala servrar, virtuella datorer, virtualiserade arbetsbelastningar, SQL Server, SharePoint Server med mera. Lär dig hur du säkerhetskopierar och återställer data med våra snabbstarter, självstudier och exempel."
+  description: Med Azure Backup kan du skydda data för lokala servrar, virtuella datorer, virtualiserade arbetsbelastningar, SQL Server, SharePoint Server med mera. Lär dig hur du säkerhetskopierar och återställer data med våra snabbstarter, självstudier och exempel.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du säkerhetskopierar en virtuell Azure-dator i Azure."
+    text: Lär dig hur du säkerhetskopierar en virtuell Azure-dator i Azure.
   - type: list
     style: icon48
     items:
@@ -40,22 +41,22 @@ sections:
         src: https://docs.microsoft.com/media/common/cli.svg
       text: Azure CLI
       href: quick-backup-vm-cli
-- title: "Stegvisa självstudier"
+- title: Stegvisa självstudier
   items:
   - type: paragraph
-    text: "Lär dig att säkerhetskopiera och återställa virtuella datorer i Azure eller från Windows Server."
+    text: Lär dig att säkerhetskopiera och återställa virtuella datorer i Azure eller från Windows Server.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"tutorial-backup-vm-at-scale\">Säkerhetskopiera flera virtuella Azure-datorer</a>"
-    - html: "<a href=\"tutorial-restore-disk\">Återställa en disk och skapa en återställd virtuell dator</a>"
-    - html: "<a href=\"tutorial-restore-files\">Återställa filer till en virtuell dator i Azure</a>"
-    - html: "<a href=\"tutorial-backup-windows-server-to-azure\">Säkerhetskopiera Windows Server till Azure</a>"
-    - html: "<a href=\"tutorial-backup-restore-files-windows-server\">Återställa filer från Azure till Windows Server</a>"
+    - html: <a href="tutorial-backup-vm-at-scale">Säkerhetskopiera flera virtuella Azure-datorer</a>
+    - html: <a href="tutorial-restore-disk">Återställa en disk och skapa en återställd virtuell dator</a>
+    - html: <a href="tutorial-restore-files">Återställa filer till en virtuell dator i Azure</a>
+    - html: <a href="tutorial-backup-windows-server-to-azure">Säkerhetskopiera Windows Server till Azure</a>
+    - html: <a href="tutorial-backup-restore-files-windows-server">Återställa filer från Azure till Windows Server</a>
 - title: Exempel
   items:
   - type: paragraph
-    text: "Använd följande exempel för att skydda dina data i Azure."
+    text: Använd följande exempel för att skydda dina data i Azure.
   - type: list
     style: unordered
     className: spaced noBullet
@@ -68,6 +69,8 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/powershell/resourcemanager/azurerm.backup/v2.3.0/azurerm.backup">Azure PowerShell</a></p>
-    - title: "Språk"
+      html: <p><a href="/powershell/resourcemanager/azurerm.backup/v2.3.0/azurerm.backup">Azure PowerShell</a></p><p><a href="/cli/azure/backup?view=azure-cli-latest">Azure CLI</a></p>
+    - title: Språk
       html: <p><a href="/dotnet/api/microsoft.azure.management.backupservices">.NET</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/backup/">Referens för Azure Backup API</a></p>
