--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -4,20 +4,19 @@ title: Grunderna i Azure IoT
 metadata:
   title: Grunderna i Azure IoT
   description: Azure IoT är en samling Microsoft-hanterade molntjänster som ansluter, övervakar och styr miljontals Sakernas Internet-resurser.
-  services: iot
   author: BryanLa
   manager: timlt
-  ms.service: iot
-  ms.tgt_pltfrm: na
-  ms.devlang: na
+  ms.service: iot-fundamentals
+  services: iot-fundamentals
   ms.topic: landing-page
-  ms.date: 04/20/2018
+  ms.date: 05/18/2018
   ms.author: bryanla
-  ms.openlocfilehash: 0a5f1d482b0298ddd65746783e3744728b1a5da5
-  ms.sourcegitcommit: eb75f177fc59d90b1b667afcfe64ac51936e2638
+  ms.openlocfilehash: 32db74234f05fcf76c8ccfe18ce295fd30a15b58
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/16/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34631164"
 abstract:
   description: Välkommen till Microsoft Azure och Sakernas Internet (Internet of Things, IoT). Azure IoT är en omfattande uppsättning tjänster och lösningar som är utformade för att hjälpa dig att skapa IoT-program från slutpunkt till slutpunkt på Azure. Azure IoT tillhandahåller en omfattande uppsättning alternativ och verktyg som är anpassade efter dina branschbehov och företagets färdigheter och resurser, från värdbaserade och fullständigt hanterade SaaS-lösningar till distinkta och specialiserade PaaS-erbjudanden samt tekniker för att skapa intelligenta Edge-produkter.
 sections:
@@ -29,7 +28,7 @@ sections:
     style: unordered
     items:
     - html: <a href="/azure/iot-central/quick-deploy-iot-central">Lär dig hur du skapar ett nytt centralt program för Azure IoT.</a>
-    - html: <a href="/azure/iot-suite/iot-suite-remote-monitoring-deploy">Lär dig hur du distribuerar lösningsacceleratorn för fjärrövervakningen.</a>
+    - html: <a href="/azure/iot-accelerators/iot-accelerators-remote-monitoring-deploy">Lär dig hur du distribuerar lösningsacceleratorn för fjärrövervakning.</a>
     - html: <a href="/azure/iot-hub/iot-hub-raspberry-pi-web-simulator-get-started">Lär dig hur du skapar en IoT Hub och ansluter din första simulerade enhet till Azure (Node.js).</a>
     - html: <a href="/azure/iot-edge/quickstart-linux">Distribuera din första IoT Edge-modul och bearbeta data på en simulerad enhet på Windows, Linux eller Mac.</a>
     - html: <a href="/azure/azure-maps/quick-demo-map-app">Starta en kartsökningsapp med Azure Maps.</a>
