--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -3,22 +3,20 @@ documentType: LandingData
 title: Dokumentation om IoT Hub
 metadata:
   title: Dokumentation om Azure IoT Hub – Självstudier, API-referens | Microsoft Docs
-  meta.description: Learn how to use IoT Hub to connect, monitor, and control billions of Internet of Things assets. Tutorials, API references, videos and other documentation.
-  services: iot-hub
+  description: Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation.
   author: dominicbetts
   manager: timlt
-  layout: LandingPage
   ms.service: iot-hub
-  ms.tgt_pltfrm: na
-  ms.devlang: na
+  services: iot-hub
   ms.topic: landing-page
   ms.date: 04/26/2018
   ms.author: dobett
-  ms.openlocfilehash: 29d313bc546af56c3ca3b0561361a39a47f56700
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: 6995c2006b32bb2fc6b9e86307b7573d0293a250
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34632932"
 abstract:
   description: Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation hjälper dig att distribuera tillförlitlig och dubbelriktad kommunikation mellan IoT-enheter och en lösnings serverdel.
 sections:
@@ -35,6 +33,8 @@ sections:
         src: https://docs.microsoft.com/media/logos/logo_java.svg
     - image:
         src: https://docs.microsoft.com/media/logos/logo_python.svg
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_ios.svg
     rows:
     - title: Skicka telemetri
       values:
@@ -42,6 +42,7 @@ sections:
       - href: /azure/iot-hub/quickstart-send-telemetry-dotnet
       - href: /azure/iot-hub/quickstart-send-telemetry-java
       - href: /azure/iot-hub/quickstart-send-telemetry-python
+      - href: /azure/iot-hub/quickstart-send-telemetry-ios
     - title: Kontrollera en enhet
       values:
       - href: /azure/iot-hub/quickstart-control-device-node
@@ -54,6 +55,8 @@ sections:
     style: ordered
     items:
     - html: <a href="/azure/iot-hub/tutorial-routing">Konfigurera automatisk meddelanderoutning i IoT Hub</a>
+    - html: <a href="/azure/iot-hub/tutorial-device-twins">Konfigurera dina enheter från en serverdelstjänst</a>
+    - html: <a href="/azure/iot-hub/tutorial-connectivity">Använda en simulerad enhet för att testa anslutningen till din IoT-hubb</a>
 - title: Referens
   items:
   - type: list
