--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -10,18 +10,18 @@
   items:
     - name: DevTest Labs
       items:
-        - name: 1. Konfigurera ett anpassat labb
+        - name: 1. Konfigurera ett labb
           href: tutorial-create-custom-lab.md
-        - name: 2. Åtkomst till ett anpassat labb
+        - name: 2. Åtkomst till ett labb
           href: tutorial-use-custom-lab.md
     - name: Klassrumslabb
       items:
         - name: 1. Konfigurera ett labbkonto
-          href: tutorial-setup-lab-account.md
+          href: classroom-labs/tutorial-setup-lab-account.md
         - name: 2. Konfigurera ett klassrumslabb
-          href: tutorial-setup-classroom-lab.md
+          href: classroom-labs/tutorial-setup-classroom-lab.md
         - name: 3. Åtkomst till ett klassrumslabb
-          href: tutorial-connect-virtual-machine-classroom-lab.md
+          href: classroom-labs/tutorial-connect-virtual-machine-classroom-lab.md
 - name: Exempel
   items:
     - name: DevTest Labs
@@ -50,20 +50,20 @@
     - name: Klassrumslabb
       items:
         - name: Hantera labbkonton
-          href: how-to-manage-lab-accounts.md
+          href: classroom-labs/how-to-manage-lab-accounts.md
         - name: Hantera klassrumslabb
-          href: how-to-manage-classroom-labs.md
+          href: classroom-labs/how-to-manage-classroom-labs.md
         - name: Åtkomst till klassrumslabb
-          href: how-to-use-classroom-lab.md
+          href: classroom-labs/how-to-use-classroom-lab.md
     - name: DevTest-labb
       items:
-        - name: Skapa ett anpassat labb
+        - name: Skapa ett labb
           href: devtest-lab-create-lab.md
-        - name: Skapa en virtuell dator i det anpassade labbet
+        - name: Skapa en virtuell dator i labbet
           href: devtest-lab-create-first-vm.md
-        - name: Ange principer för det anpassade labbet
+        - name: Ange principer för labbet
           href: devtest-lab-get-started-with-lab-policies.md
-        - name: Använda virtuella datorer i ett anpassat labb
+        - name: Använd virtuella datorer i ett labb
           items:
             - name: 'Skapa VM:ar'
               href: devtest-lab-add-vm.md
@@ -75,7 +75,7 @@
               href: devtest-lab-use-resource-manager-template.md
             - name: Starta om en virtuell dator
               href: devtest-lab-restart-vm.md
-        - name: Använd miljöer i ett anpassat labb
+        - name: Använd miljöer i ett labb
           items:
             - name: Skapa en miljö
               href: devtest-lab-create-environment-from-arm.md
@@ -85,7 +85,7 @@
               href: devtest-lab-add-devtest-user.md
             - name: Anpassa behörigheter med anpassade roller
               href: devtest-lab-grant-user-permissions-to-specific-lab-policies.md
-        - name: Konfigurera ett anpassat labb
+        - name: Konfigurera ett labb
           items:
             - name: Ange principer och scheman
               href: devtest-lab-set-lab-policy.md
@@ -95,11 +95,11 @@
               href: devtest-lab-configure-marketplace-images.md
             - name: Aktivera en licensierad avbildning
               href: devtest-lab-enable-licensed-images.md
-            - name: Lägga till taggar i ett anpassat labb
+            - name: Lägg till taggar till ett labb
               href: devtest-lab-add-tag.md
-            - name: Publicera ett meddelande i ett anpassat labb
+            - name: Publicera ett meddelande i ett labb
               href: devtest-lab-announcements.md
-            - name: Lägga till supportinformation till ett anpassat labb
+            - name: Lägg till supportinformation till ett labb
               href: devtest-lab-internal-support-message.md
         - name: Välj anpassad avbildning eller formel
           href: devtest-lab-comparing-vm-base-image-types.md
