--- a/articles/lab-services/index.yml
+++ b/articles/lab-services/index.yml
@@ -13,11 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/06/2018
   ms.author: spelluru
-  ms.openlocfilehash: f06102399cac6ef1b6b31155dff32999a923e173
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: 1b37824b113fd9b1aaf225c5cb24b2dd27f1b47f
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34636706"
 abstract:
   description: Lär dig hur du använder Azure Lab Services för att snabbt konfigurera ett labb för utveckling, testning, hackathon eller ett klassrumslabb för ditt team eller dina studenter i molnet. Självstudier för Azure, exempel och mycket mer visar hur du skapar, hanterar och skyddar labb.
 sections:
@@ -28,16 +29,16 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: <a href="/azure/lab-services/tutorial-setup-lab-account">Konfigurera ett labbkonto</a>
-    - html: <a href="/azure/lab-services/tutorial-setup-classroom-lab">Konfigurera ett klassrumslabb</a>
-    - html: <a href="/azure/lab-services/tutorial-connect-virtual-machine-classroom-lab">Åtkomst till ett klassrumslabb</a>
+    - html: <a href="/azure/lab-services/classroom-labs/tutorial-setup-lab-account">Konfigurera ett labbkonto</a>
+    - html: <a href="/azure/lab-services/classroom-labs/tutorial-setup-classroom-lab">Konfigurera ett klassrumslabb</a>
+    - html: <a href="/azure/lab-services/classroom-labs/tutorial-connect-virtual-machine-classroom-lab">Åtkomst till ett klassrumslabb</a>
   - type: paragraph
-    text: Lär dig hur du skapar och använder ett <b>anpassat labb</b> med hjälp av Azure Lab Services.
+    text: Lär dig hur du skapar och använder ett <b>labb</b> med hjälp av Azure DevTest Labs.
   - type: list
     style: ordered
     items:
-    - html: <a href="/azure/lab-services/tutorial-create-custom-lab">Konfigurera ett anpassat labb</a>
-    - html: <a href="/azure/lab-services/tutorial-use-custom-lab">Åtkomst till ett anpassat labb</a>
+    - html: <a href="/azure/lab-services/tutorial-create-custom-lab">Konfigurera ett labb</a>
+    - html: <a href="/azure/lab-services/tutorial-use-custom-lab">Åtkomst till ett labb</a>
 - title: Exempel
   items:
   - type: paragraph
