--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -63,6 +63,8 @@
               href: deploy-with-resource-manager-template.md
             - name: Skapa i en annan region
               href: multi-geo.md
+            - name: Visa och ta bort Studio-kontodata
+              href: export-delete-personal-data-dsr.md
     - name: Skaffa och förstå data
       items:
         - name: Importera utbildningsdata
@@ -215,6 +217,8 @@
           href: gallery-collections.md
         - name: Anpassade moduler
           href: gallery-custom-modules.md
+        - name: Visa och ta bort kontodata
+          href: ai-gallery-control-personal-data-dsr.md
 - name: Resurser
   items:
     - name: Azure-översikt
