--- a/articles/redis-cache/TOC.yml
+++ b/articles/redis-cache/TOC.yml
@@ -10,6 +10,8 @@
       href: cache-web-app-howto.md
     - name: Skapa en NET-app
       href: cache-dotnet-how-to-use-azure-redis-cache.md
+    - name: Skapa en .NET Core-app
+      href: cache-dotnet-core-quickstart.md
     - name: Skapa en Node.js-app
       href: cache-nodejs-get-started.md
     - name: Skapa en Java-app
@@ -48,6 +50,8 @@
           href: cache-how-to-premium-vnet.md
         - name: Distribuera din cache med klustring
           href: cache-how-to-premium-clustering.md
+        - name: Migrera från Managed Cache Service
+          href: cache-migrate-to-redis.md
     - name: Automatisera
       items:
         - name: Distribuera och hantera med Azure Powershell
