--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -61,17 +61,25 @@
       href: cognitive-search-concept-intro.md
     - name: Fulltextsökning
       href: search-lucene-query-architecture.md
-    - name: Språklig analys
-      href: search-analyzers.md
-    - name: Indexering
-      href: search-what-is-data-import.md
-    - name: Indexdefinition
-      href: search-what-is-an-index.md
-    - name: Indexerare
-      href: search-indexer-overview.md
 - name: Instruktionsguider
   items:
-    - name: Planera och designa
+    - name: Kognitiv sökning (förhandsversion)
+      items:
+        - name: Definiera en kunskapsuppsättning
+          href: cognitive-search-defining-skillset.md
+        - name: Referera till en anteckning
+          href: cognitive-search-concept-annotations-syntax.md
+        - name: Mappa till indexfält
+          href: cognitive-search-output-field-mapping.md
+        - name: Bearbeta och extrahera information från bilder
+          href: cognitive-search-concept-image-scenarios.md
+        - name: Integrera anpassade kunskaper
+          href: cognitive-search-custom-skill-interface.md
+        - name: Exempel – anpassade kunskaper
+          href: cognitive-search-create-custom-skill-example.md
+        - name: Felsökningstips
+          href: cognitive-search-concept-troubleshooting.md
+    - name: Planering
       items:
         - name: Välj en nivå
           href: search-sku-tier.md
@@ -81,8 +89,6 @@
           href: search-capacity-planning.md
         - name: Utveckla mönster för flera innehavare
           href: search-modeling-multitenant-saas-applications.md
-        - name: Prestanda och optimering
-          href: search-performance-optimization.md
     - name: Säkerhet
       items:
         - name: Säkerhetsöversikt
@@ -117,55 +123,59 @@
               href: search-dotnet-mgmt-sdk-migration.md
         - name: 'Uppgradera REST-API:et'
           href: search-api-migration.md
+    - name: Indexdesign
+      items:
+        - name: Indexdefinition
+          href: search-what-is-an-index.md
+        - name: Analysverktyg
+          items:
+            - name: Textanalysverktyg
+              href: search-analyzers.md
+            - name: API för språkanalysverktyg
+              href: 'https://docs.microsoft.com/rest/api/searchservice/language-support'
+            - name: API för anpassade analysverktyg
+              href: 'https://docs.microsoft.com/rest/api/searchservice/custom-analyzers-in-azure-search'
+        - name: Automatiska förslag
+          href: 'https://docs.microsoft.com/rest/api/searchservice/suggesters'
         - name: Skapa modeller över komplexa datatyper
           href: search-howto-complex-data-types.md
-        - name: Hantera samtidiga uppdateringar
-          href: search-howto-concurrency.md
-        - name: Växla resultat
-          href: search-pagination-page-layout.md
-    - name: Textanalys
-      items:
-        - name: Språkanalytiker
-          href: 'https://docs.microsoft.com/rest/api/searchservice/language-support'
-        - name: Anpassade analysverktyg
-          href: 'https://docs.microsoft.com/rest/api/searchservice/custom-analyzers-in-azure-search'
+        - name: Aspektbaserad navigering
+          href: search-faceted-navigation.md
+        - name: Relevansjustering
+          href: 'https://docs.microsoft.com/rest/api/searchservice/add-scoring-profiles-to-a-search-index'
+        - name: Synonymer (förhandsversion)
+          href: search-synonyms.md
     - name: Indexeringsdata
       items:
-        - name: Azure Blob Storage-indexeraren
-          href: search-howto-indexing-azure-blob-storage.md
-        - name: Azure Table Storage-indexeraren
-          href: search-howto-indexing-azure-tables.md
-        - name: Azure SQL-indexeraren
-          href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
-        - name: Azure Cosmos DB-indexeraren
-          href: search-howto-index-cosmosdb.md
-        - name: Indexera CSV-blobar
-          href: search-howto-index-csv-blobs.md
-        - name: Indexera JSON-blobar
-          href: search-howto-index-json-blobs.md
-        - name: Konfigurera indexerarens anslutningar till SQL Server på Azure VM
-          href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
-        - name: Fältmappningar i indexerare
-          href: search-indexer-field-mappings.md
+        - name: Push-överföring vs. Pull-indexering
+          href: search-what-is-data-import.md
         - name: Bygga om ett index
           href: search-howto-reindex.md
-    - name: Kognitiv sökning (förhandsversion)
-      items:
-        - name: Definiera en kunskapsuppsättning
-          href: cognitive-search-defining-skillset.md
-        - name: Referera till en anteckning
-          href: cognitive-search-concept-annotations-syntax.md
-        - name: Mappa till indexfält
-          href: cognitive-search-output-field-mapping.md
-        - name: Bearbeta och extrahera information från bilder
-          href: cognitive-search-concept-image-scenarios.md
-        - name: Integrera anpassade kunskaper
-          href: cognitive-search-custom-skill-interface.md
-        - name: Exempel – anpassade kunskaper
-          href: cognitive-search-create-custom-skill-example.md
-        - name: Felsökningstips
-          href: cognitive-search-concept-troubleshooting.md
-    - name: Fulltextsökning
+        - name: Indexera stora datamängder
+          href: search-howto-large-index.md
+        - name: Hantera samtidiga uppdateringar
+          href: search-howto-concurrency.md
+        - name: Indexerare
+          items:
+            - name: Översikt över indexerare
+              href: search-indexer-overview.md
+            - name: Blob Storage-indexeraren
+              href: search-howto-indexing-azure-blob-storage.md
+            - name: Table Storage-indexeraren
+              href: search-howto-indexing-azure-tables.md
+            - name: SQL DB-indexerare
+              href: search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md
+            - name: Cosmos DB-indexeraren
+              href: search-howto-index-cosmosdb.md
+            - name: CSV-blob-indexering
+              href: search-howto-index-csv-blobs.md
+            - name: JSON-blob-indexering
+              href: search-howto-index-json-blobs.md
+            - name: Ansluta till virtuella SQL Server-datorer
+              href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
+            - name: Fältmappningar
+              href: search-indexer-field-mappings.md
+    - name: Söker efter data
       items:
         - name: Grundläggande frågekonstruktion
           href: search-query-overview.md
@@ -173,24 +183,22 @@
           href: 'https://docs.microsoft.com/rest/api/searchservice/simple-query-syntax-in-azure-search'
         - name: Lucene-frågesyntaxen
           href: 'https://docs.microsoft.com/rest/api/searchservice/lucene-query-syntax-in-azure-search'
-        - name: Exempel på Lucene-syntaxfråga
+        - name: Lucene-exempelfrågor
           href: search-query-lucene-examples.md
-        - name: Aspektbaserad navigering
-          href: search-faceted-navigation.md
-        - name: Poängprofiler
+        - name: Växla resultat
+          href: search-pagination-page-layout.md
+        - name: Relevansjustering
           href: 'https://docs.microsoft.com/rest/api/searchservice/add-scoring-profiles-to-a-search-index'
-        - name: Förslag
-          href: 'https://docs.microsoft.com/rest/api/searchservice/suggesters'
-        - name: Synonymer (förhandsversion)
-          href: search-synonyms.md
-    - name: Filter
-      items:
-        - name: Översikt över filter
-          href: search-filters.md
-        - name: Facet-filter
-          href: search-filters-facets.md
-        - name: Filtrera uttryckssyntax
-          href: 'https://docs.microsoft.com/rest/api/searchservice/odata-expression-syntax-for-azure-search'
+        - name: Filter
+          items:
+            - name: Översikt över filter
+              href: search-filters.md
+            - name: Facet-filter
+              href: search-filters-facets.md
+            - name: Filtrera uttryckssyntax
+              href: 'https://docs.microsoft.com/rest/api/searchservice/odata-expression-syntax-for-azure-search'
+        - name: Prestanda och optimering
+          href: search-performance-optimization.md
     - name: Administration och analys
       items:
         - name: Administration (portalen)
@@ -211,41 +219,31 @@
       href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/ref/azure.mgmt.search.html'
     - name: REST
       href: /rest/api/searchservice
-      items:
-        - name: 2017-11-11-Preview
-          href: search-api-2017-11-11-preview.md
     - name: REST (hantering)
       href: /rest/api/searchmanagement
-    - name: Kognitiv sökning (förhandsversion)
+    - name: REST (förhandsversion)
+      href: search-api-preview.md
+    - name: Fördefinierade kunskaper (förhandsversion)
+      href: cognitive-search-predefined-skills.md
       items:
-        - name: 2017-11-11 – förhandsversion (REST)
-          href: search-api-2017-11-11-preview.md
-          items:
-            - name: Skapa kunskapsuppsättning (förhandsversion)
-              href: ref-create-skillset.md
-            - name: Skapa indexerare (förhandsversion)
-              href: ref-create-indexer.md
-        - name: Fördefinierade kunskaper
-          href: cognitive-search-predefined-skills.md
-          items:
-            - name: Extrahering av nyckelfraser
-              href: cognitive-search-skill-keyphrases.md
-            - name: Språkidentifiering
-              href: cognitive-search-skill-language-detection.md
-            - name: Igenkänning av namngiven enhet
-              href: cognitive-search-skill-named-entity-recognition.md
-            - name: Textsammanslagning
-              href: cognitive-search-skill-textmerger.md
-            - name: Textuppdelning
-              href: cognitive-search-skill-textsplit.md
-            - name: Sentiment
-              href: cognitive-search-skill-sentiment.md
-            - name: Bildanalys
-              href: cognitive-search-skill-image-analysis.md
-            - name: OCR
-              href: cognitive-search-skill-ocr.md
-            - name: Formaren
-              href: cognitive-search-skill-shaper.md
+        - name: Extrahering av nyckelfraser
+          href: cognitive-search-skill-keyphrases.md
+        - name: Språkidentifiering
+          href: cognitive-search-skill-language-detection.md
+        - name: Igenkänning av namngiven enhet
+          href: cognitive-search-skill-named-entity-recognition.md
+        - name: Textsammanslagning
+          href: cognitive-search-skill-textmerger.md
+        - name: Textuppdelning
+          href: cognitive-search-skill-textsplit.md
+        - name: Sentiment
+          href: cognitive-search-skill-sentiment.md
+        - name: Bildanalys
+          href: cognitive-search-skill-image-analysis.md
+        - name: OCR
+          href: cognitive-search-skill-ocr.md
+        - name: Formaren
+          href: cognitive-search-skill-shaper.md
 - name: Resurser
   items:
     - name: FAQ – vanliga frågor och svar
