--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -101,6 +101,14 @@
               href: hyper-v-vmm-secondary-support-matrix.md
             - name: Arkitektur för Hyper-V till sekundär
               href: hyper-v-vmm-architecture.md
+    - name: Nätverk
+      items:
+        - name: Azure Traffic Manager med Site Recovery
+          href: concepts-traffic-manager-with-site-recovery.md
+        - name: ExpressRoute med Site Recovery
+          href: concepts-expressroute-with-site-recovery.md
+        - name: Nätverkssäkerhetsgrupper med Site Recovery
+          href: concepts-network-security-group-with-site-recovery.md
     - name: Haveriberedskap för appar
       href: site-recovery-workload.md
     - name: Om återställningsplaner
@@ -109,10 +117,6 @@
       href: migrate-overview.md
     - name: Om rollbaserad åtkomstkontroll med Site Recovery
       href: site-recovery-role-based-linked-access-control.md
-    - name: Om Azure Traffic Manager med Site Recovery
-      href: concepts-traffic-manager-with-site-recovery.md
-    - name: Om ExpressRoute med Site Recovery
-      href: concepts-expressroute-with-site-recovery.md
     - name: VANLIGA FRÅGOR OCH SVAR
       href: site-recovery-faq.md
 - name: Instruktionsguider
