--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -11,21 +11,22 @@ metadata:
   ms.service: stream-analytics
   ms.topic: landing-page
   ms.date: 04/25/2018
-  ms.openlocfilehash: aad76cc87130e66908779c07b03d5db326f726ea
-  ms.sourcegitcommit: e2adef58c03b0a780173df2d988907b5cb809c82
+  ms.openlocfilehash: 67ed04486ef6ddd94d6783188f9b94c723506a7a
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/28/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34652822"
 abstract:
   description: Lär dig hur du kör Sakernas Internet-analys (IoT) i molnet med Stream Analytics, en fullständigt hanterad motor för händelsebearbetning. Självstudier och annan dokumentation visar hur du analyserar data i realtid från program, sensorer, enheter, sociala media och många fler.
   aside:
     image:
       alt: 
       height: 110
-      src: https://sec.ch9.ms/sessions/connect/T157.png
+      src: ./media/index/streaming-analytics-thumbnail.png
       width: 250
-    title: Realtidsanalys på IoT Edge med Azure Stream Analytics. (8:51)
-    href: https://azure.microsoft.com/en-us/resources/videos/connect-2017-real-time-analytics-on-iot-edge-with-azure-stream-analytics/
+    title: Streaming Analytics på Microsoft Azure. (8:48)
+    href: https://channel9.msdn.com/Events/Connect/2016/161
     width: 250
 sections:
 - title: Snabbstarter på 5 minuter
