--- a/articles/time-series-insights/index.yml
+++ b/articles/time-series-insights/index.yml
@@ -2,29 +2,39 @@
 documentType: LandingData
 title: Dokumentation om Azure Time Series Insights
 metadata:
-  title: "Dokumentation om Azure Time Series Insights – självstudier, API-referens | Microsoft Docs"
-  description: "Lär dig hur du kör IoT-analys i molnet med fullständigt hanterad händelsebearbetning. Analysera data i realtid från program, sensorer, enheter och många fler."
+  title: Dokumentation om Azure Time Series Insights – självstudier, API-referens | Microsoft Docs
+  description: Lär dig hur du kör IoT-analys i molnet med fullständigt hanterad händelsebearbetning. Analysera data i realtid från program, sensorer, enheter och många fler.
   services: time-series-insights
-  author: kfile
-  manager: jhubbard
+  author: bryanla
+  manager: timlt
   ms.service: time-series-insights
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 11/13/2017
-  ms.author: kfile
-  ms.openlocfilehash: 8ccc0fe8ca23fabb6d2cb697836e8f402dbaf672
-  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
+  ms.date: 05/16/2018
+  ms.author: bryanla
+  ms.openlocfilehash: 5ea126c2095e6bada8752f4b4187f504bbd67a46
+  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 06/01/2018
+  ms.locfileid: "34651030"
 abstract:
-  description: "Lär dig hur du konfigurerar en Time Series Insights-miljö samt utforskar och analyserar Time Series-data i IoT-lösningarna eller anslutna objekt. I dokumentationen finns information om förhandskrav, anvisningar, API-referenser och andra artiklar som hjälper dig att komma igång på några minuter."
+  description: Lär dig hur du konfigurerar en Time Series Insights-miljö samt utforskar och analyserar Time Series-data i IoT-lösningarna eller anslutna objekt. I dokumentationen finns information om förhandskrav, anvisningar, API-referenser och andra artiklar som hjälper dig att komma igång på några minuter.
+  aside:
+    image:
+      alt: En videointroduktion till funktioner för Azure IoT Time Series Insights.
+      height: 110
+      src: media/index/tsi-intro-shannon-bloch.png
+      width: 250
+    title: Time Series Insight för IoT-appar. (16:09)
+    href: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Time-Series-Insight-for-IoT-apps/player
+    width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du distribuerar Log Analytics och konfigurerar insamling av data från Azure, andra molntjänstleverantörer och lokala resurser."
+    text: Lär dig hur du distribuerar Log Analytics och konfigurerar insamling av data från Azure, andra molntjänstleverantörer och lokala resurser.
   - type: list
     style: icon48
     items:
@@ -39,4 +49,4 @@ sections:
     className: cardsD
     items:
     - title: API:er
-      html: "<p><a href=\"/rest/api/time-series-insights-management\">API för resurshantering</a></p>   <p><a href=\"/rest/api/time-series-insights/time-series-insights-reference-queryapi\">Fråge-API</a></p><p><a href=\"/rest/api/time-series-insights/time-series-insights-reference-query-syntax\">Frågesyntax</a></p>"
+      html: <p><a href="/rest/api/time-series-insights-management">API för resurshantering</a></p>   <p><a href="/rest/api/time-series-insights/time-series-insights-reference-queryapi">Fråge-API</a></p><p><a href="/rest/api/time-series-insights/time-series-insights-reference-query-syntax">Frågesyntax</a></p>
