--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,14 +6,14 @@
       href: azure-stack-poc.md
     - name: Viktig information
       items:
+        - name: 1805 uppdatering
+          href: azure-stack-update-1805.md
         - name: 1804 uppdatering
           href: azure-stack-update-1804.md
         - name: 1803 uppdatering
           href: azure-stack-update-1803.md
         - name: 1802 uppdatering
           href: azure-stack-update-1802.md
-        - name: 1712 uppdatering
-          href: azure-stack-update-1712.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -52,6 +52,12 @@
               items:
                 - name: Publicera slutpunkter
                   href: azure-stack-integrate-endpoints.md
+        - name: Identitetsintegrering
+          items:
+            - name: Välj en identitetsleverantör
+              href: azure-stack-integrate-identity.md
+            - name: Verifiera Azure identitet
+              href: azure-stack-validate-identity.md
         - name: Azure Stack PKI distributionskrav
           href: azure-stack-pki-certs.md
           items:
@@ -63,20 +69,17 @@
               href: azure-stack-validate-pki-certs.md
             - name: Åtgärda PKI-certifikat
               href: azure-stack-remediate-certs.md
-            - name: Distributionsresurser
-              items:
-                - name: Start-AzsReadiness cmdlet-referens
-                  href: azure-stack-azsreadiness-cmdlet.md
-                - name: Visa beredskapsrapporten
-                  href: azure-stack-validation-report.md
-            - name: Identitetsintegrering
-              items:
-                - name: Välj en identitetsleverantör
-                  href: azure-stack-integrate-identity.md
-                - name: Verifiera Azure identitet
-                  href: azure-stack-validate-identity.md
+        - name: Distributionsresurser
+          items:
+            - name: Om distributionen nätverk
+              href: deployment-networking.md
         - name: Verifiera Azure registrering
           href: azure-stack-validate-registration.md
+          items:
+            - name: Start-AzsReadiness cmdlet-referens
+              href: azure-stack-azsreadiness-cmdlet.md
+            - name: Visa beredskapsrapporten
+              href: azure-stack-validation-report.md
         - name: Externa övervakning
           href: azure-stack-integrate-monitor.md
         - name: Integrering av säkerhet
@@ -196,6 +199,8 @@
               href: azure-stack-plan-offer-quota-overview.md
             - name: Skapa en plan
               href: azure-stack-create-plan.md
+            - name: Skapa en plan för tillägg
+              href: create-add-on-plan.md
             - name: Skapa ett erbjudande
               href: azure-stack-create-offer.md
             - name: Prenumerera på ett erbjudande
