--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -40,6 +40,8 @@
       href: dns-alerts-metrics.md
     - name: Omvänt DNS
       href: dns-reverse-dns-overview.md
+    - name: Haveriberedskap med hjälp av Azure DNS och Traffic Manager
+      href: ../networking/disaster-recovery-dns-traffic-manager.md
 - name: Gör så här för att
   items:
     - name: Skapa anpassad DNS-zon och -post – Azure CLI
