--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -47,6 +47,8 @@
           href: container-instances-using-azure-container-registry.md
         - name: Ange miljövariabler (env)
           href: container-instances-environment-variables.md
+        - name: Konfigurera liveavsökningar
+          href: container-instances-liveness-probe.md
     - name: Hantera
       items:
         - name: Köra ett kommando (exec)
