--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -41,6 +41,8 @@
       href: traffic-manager-rum-overview.md
     - name: Trafikvy
       href: traffic-manager-traffic-view-overview.md
+    - name: Haveriberedskap med hjälp av Azure DNS och Traffic Manager
+      href: ../networking/disaster-recovery-dns-traffic-manager.md
     - name: Vanliga frågor och svar
       href: traffic-manager-FAQs.md
 - name: Gör så här för att
