--- a/articles/log-analytics/toc.yml
+++ b/articles/log-analytics/toc.yml
@@ -28,7 +28,11 @@
 - name: Begrepp
   items:
     - name: Övergång till OMS-portalen
-      href: log-analytics-oms-portal-faq.md
+      items:
+        - name: Översikt
+          href: log-analytics-oms-portal-transition.md
+        - name: Vanliga frågor
+          href: log-analytics-oms-portal-faq.md
     - name: Uppgradering av arbetsyta
       items:
         - name: Översikt över uppgradering
