--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -74,6 +74,8 @@
       href: load-balancer-standard-public-zone-redundant-cli.md
     - name: Belastningsutjämna virtuella datorer inom en zon (CLI)
       href: load-balancer-standard-public-zonal-cli.md
+    - name: Skapa en Azure Load Balancer med REST API
+      href: create-load-balancer-rest-api.md
     - name: Skapa en Basic Load Balancer (mall)
       href: load-balancer-get-started-internet-arm-template.md
     - name: Skapa offentlig Load Balancer med IPv6
@@ -106,6 +108,8 @@
           href: load-balancer-multiple-ip-powershell.md
     - name: Logganalys för Azure Load Balancer
       href: load-balancer-monitor-log.md
+    - name: Hämta Load Balancer-mått med REST
+      href: load-balancer-query-metrics-rest-api.md
     - name: Konfigurera portar med hög tillgänglighet för intern Azure Load Balancer
       href: load-balancer-configure-ha-ports.md
     - name: Felsöka
